<resources>
    <string name="app_name">My Food App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_daily_meal">Daily Meal</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_mycart">My Cart</string>
    <string name="my_restaurant_app">My Restaurant App</string>
    <string name="hello_explore_your_dream_app">Hello Explore Your Dream App </string>
    <string name="sign_in">Sign In</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="p_c_j">P.C.J</string>
    <string name="ppgmail_com">ppgmail.com</string>
    <string name="product_name">Product Name</string>
    <string name="_10_00_23_00">10:00-23:00</string>
    <string name="_5_0">5.0</string>
    <string name="dinner_recipes">10 weekend Delicious \n Dinner Recipes</string>
    <string name="testy_food_is_here">Your favourite and testy food is here!</string>
    <string name="make_order">Make Order</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>

</resources>